fixed routing from index to comp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <div>
                                 <ul>
                                     <li>
-                                        <a class='course' href='./COMP4537.html'>COMP4537</a>
+                                        <a class='course' href='../html/COMP4537.html'>COMP4537</a>
                                     </li>
                                     <li>COMP4800</li>
                             </div>
