fixed all routing

--- a/COMP4537/COMP4537.html
+++ b/COMP4537/COMP4537.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <title>COMP4537</title>
-        <link rel='stylesheet' href="../css/comp.css" />
+        <link rel='stylesheet' href="../css/lab1/comp.css" />
 
     </head>
     <body>
@@ -20,7 +20,7 @@
             </div>
             <div class='lab-list border-style'>
                 <ul>
-                    <li><a class="lab" href='./quiz.html'>Lab 1</a></li>
+                    <li><a class="lab" href='./labs/1/quizQuestions/index.html'>Lab 1</a></li>
                     <li>Lab 2..</li>
                     <li>Lab 3..</li>
                     <li>Lab 4..</li>
