--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <title>About Myself</title>
-        <link rel='stylesheet' href='./css/index.css' />
+        <link rel='stylesheet' href='./css/lab1/index.css' />
 
     </head>
     <body>
@@ -18,7 +18,7 @@
                     <div class='title'><p>John Poku<p></div>
                     <div class='top-section'>
                         <div id='profile-picture'>
-                            <img src='./assets/img/Frederick_Douglass.jpg' alt='A picture of the American social reformer Frederick Douglass' title='A picture of the American social reformer Frederick Douglass' />
+                            <img src='./assets/img/lab1/Frederick_Douglass.jpg' alt='A picture of the American social reformer Frederick Douglass' title='A picture of the American social reformer Frederick Douglass' />
                             </img>
                         </div>
                         <div id='para'>
@@ -39,7 +39,7 @@
                             <div>
                                 <ul>
                                     <li>
-                                        <a class='course' href='./html/COMP4537.html'>COMP4537</a>
+                                        <a class='course' href='./COMP4537/COMP4537.html'>COMP4537</a>
                                     </li>
                                     <li>COMP4800</li>
                             </div>
