--- a/COMP4537/labs/1/quizQuestions/index.html
+++ b/COMP4537/labs/1/quizQuestions/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Quiz</title>
-        <link rel="stylesheet" href="../css/quiz.css" />
+        <link rel="stylesheet" href="../../../../css/lab1/quiz.css" />
     </head>
     <body>
         <div class='container'>
@@ -102,7 +102,6 @@
 
 
         
-        <script src='../js/index.js'></script>
-        <script src='../js/quiz.js'></script>
+        <script src='../../../../js/index.js'></script>
     </body>
 </html>
