--- a/COMP4537/COMP4537.html
+++ b/COMP4537/COMP4537.html
@@ -20,16 +20,16 @@
             </div>
             <div class='lab-list border-style'>
                 <ul>
-                    <li><a class="lab" href='./labs/1/quizQuestions/index.html'>Lab 1</a></li>
+                    <li><a class="lab" href='./labs/1/quizQuestions/index.html'>Lab 1 Hard-Coded_Quiz</a></li>
                     <li>Lab 2..</li>
                     <li>Lab 3..</li>
                     <li>Lab 4..</li>
                 </ul>
 
-            </div>
+            </div>        
             <button class='button about-me' type='text/javascript' onclick="buttonPress()" type='button'>About Myself</button>
+
         </div>
-        
 
         <script src='../js/index.js'></script>
     </body>
