fixed type on index.html in root dir

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div id='para'>
                             <h2>About Me</h2>
                             <p>
-                                John was--Is a curious and tireless man. At the age 12 months old, which is really just 1 year old, he learned to walk...I think,
+                                John was--Is a curious and tireless man. At the of age 12 months old, which is really just 1 year old, he learned to walk...I think,
                                 and by the age of 5 to ride a bike. Shortly after he was introduced to skating, but we shall strike that experience from the record.
                                 Skipping to adolescence, he was introduced to console gaming, and immediately after, all hope for a future was lost. He got caught up
                                 in video games, then latched onto anime, and transcended to the superior medium that is mangaka, and in those hobbies it was feared that
