COMPLETED: Dynamic Array Buttons; COMPLETED: Dynamic Quiz Questions; FIX: minor grammar typos on old quiz questoins, [IT WAS COMPLETE THOUGH]

--- a/COMP4537/labs/2/buttons/buttons.html
+++ b/COMP4537/labs/2/buttons/buttons.html
@@ -8,6 +8,10 @@
     <div id='container'>
 
     </div>
+    <button class='button submitBTN' type='text/javascript' onclick="submitPress()" type='button' style='margin-top: 10px;'>Go Back</button>
+
     <script src="../../../../js/lab2/buttons.js"></script>
+    <script src='../../../../js/index.js'></script>
+
 </body>
 </html>
