--- a/COMP4537/COMP4537.html
+++ b/COMP4537/COMP4537.html
@@ -21,7 +21,12 @@
             <div class='lab-list border-style'>
                 <ul>
                     <li><a class="lab" href='./labs/1/quizQuestions/index.html'>Lab 1 Hard-Coded_Quiz</a></li>
-                    <li><a class="lab" >Lab 2 Dynamic Generating Button; Dynamic Generating Quiz</a></li>
+                    <li>Lab 2
+                        <ul>
+                            <li><a class='lab2' href='./labs/2/buttons/buttons.html'>Array of Buttons</a></li>
+                            <li><a class='lab2' href='./labs/2/quizQuestions/index.html'>Dynamic Quiz</a></li>
+                        </ul>
+                    </li>
                     <li>Lab 3..</li>
                     <li>Lab 4..</li>
                     <li><a class='individual' href='./IndividualAssignment/MemoryGame/index.html'>Invididual Assignment</a></li>
