--- a/COMP4537/labs/1/quizQuestions/index.html
+++ b/COMP4537/labs/1/quizQuestions/index.html
@@ -22,7 +22,7 @@
                     <input type='radio' name='question1'id='q1a1' value='function:myFunction()'>
                     <label for='q1a1'><span class='red'>function</span>:<span class='blue'>myFunction()</span></label><br>
 
-                    <input type='radio' name='question1' id='q1a2' value='function myFunction'>
+                    <input type='radio' name='question1' id='q1a2' value='function myFunction()'>
                     <label for='q1a2'><span class='red'>function</span> <span class='blue'>myFunction</span></label><br>
 
                     <input type='radio' name='question1' id='q1a3' value='def myFunction()'>
@@ -66,7 +66,7 @@
                     <p>4) <span class='red'>var</span> a <span class='blue'>=</span> 5</p>
                     <p><span class='red'>function</span> <span class='blue'>first()</span> {</p>
                     <p>a <span class='blue'>=</span> 6;</p>
-                    <p>)</p>
+                    <p>}</p>
                     <input type='radio' name='q4a1' value='0'>
                     <label for='q4a1'>0</label><br>
                         
