--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -7,8 +7,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../../css/index.css">
 
     </head>
     <body>
@@ -19,7 +18,7 @@
 
         <input id='restart' type='submit' value='Restart' onclick='restartGame()'>
 
-        <script type='text/javascript' src='../js/display-controller.js'></script>
-        <script type='text/javascript' src="../js/game-controller.js"></script>
+        <script type='text/javascript' src='../../js/display-controller.js'></script>
+        <script type='text/javascript' src="../../js/game-controller.js"></script>
     </body>
 </html>
