--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        <div id='leadboard-container' class='container'>
+        <div id='leadboard-container' class='leaderboard-container'>
             <div id='score-container' class='score-container'>
             </div>
       </div>
