toying with sound

--- a/COMP4537/IndividualAssignment/MemoryGame/index.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/index.html
@@ -23,7 +23,7 @@
             <input id='terminate' type='submit' value='Terminate' onclick='terminate()'>
 
         </div>
-        
+        <audio id="demon" src="./assets/audio/demongirl.mp3" type="audio.mp3"></audio>
         <script type='text/javascript' src="./js/constants.js"></script>
         <script type='text/javascript' src="./js/index.js"></script>
         <script type='text/javascript' src='./js/display-controller.js'></script>
