--- a/COMP4537/IndividualAssignment/MemoryGame/index.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/index.html
@@ -9,7 +9,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
     </head>
-    <body>
+    <body onload="      
+        createGame(rowCount, colCount);
+        getBlocks();
+        flashCorrectTiles(tileCount);
+        setTimeout(() => { correctTiles = getAnswerTiles() }, 3700);  ">
         <div id='container' class='container'>
             <div id='score-div'>
                 <div class='scoring-label'>Score</div>
