janky windowload handling

--- a/COMP4537/IndividualAssignment/MemoryGame/index.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/index.html
@@ -9,11 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
     </head>
-    <body onload="      
-        createGame(rowCount, colCount);
-        getBlocks();
-        flashCorrectTiles(tileCount);
-        setTimeout(() => { correctTiles = getAnswerTiles() }, 3700);  ">
+    <body>
         <div id='container' class='container'>
             <div id='score-div'>
                 <div class='scoring-label'>Score</div>
