--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -18,6 +18,8 @@
 
         <input id='restart' type='submit' value='Restart' onclick='restartGame()'>
 
+        <script type='text/javascript' src="./js/constants.js"></script>
+        <script type='text/javascript' src="./js/index.js"></script>
         <script type='text/javascript' src='../js/display-controller.js'></script>
         <script type='text/javascript' src="../js/game-controller.js"></script>
     </body>
