--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        <div id='leadboard-container' class='leaderboard-container'>
+        <div id='leaderboard-container' class='leaderboard-container'>
       </div>
 
         <input id='restart' type='submit' value='Restart' onclick='restartGame()'>
