--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -13,7 +13,7 @@
     <body>
         <div id='leaderboard-container' class='leaderboard-container'>
         </div>
-        <input id='restart' type='submit' value='Restart' onclick='restartGame()'>
+        {% comment %} <input id='restart' type='submit' value='Restart' onclick='restartGame()'> {% endcomment %}
 
         <script type='text/javascript' src='../js/display-controller.js'></script>
         <script type='text/javascript' src="../js/game-controller.js"></script>
