--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -11,9 +11,7 @@
 
     </head>
     <body>
-        <div id='leaderboard-container' class='leaderboard-container'>
-        </div>
-        {% comment %} <input id='restart' type='submit' value='Restart' onclick='restartGame()'> {% endcomment %}
+        <div id='leaderboard-container' class='leaderboard-container'></div>
 
         <script type='text/javascript' src='../js/display-controller.js'></script>
         <script type='text/javascript' src="../js/game-controller.js"></script>
