--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -11,7 +11,9 @@
 
     </head>
     <body>
-        <div id='leaderboard-container' class='leaderboard-container'></div>
+        <div id="l-container">
+            <div id='leaderboard-container' class='leaderboard-container'></div>
+        </div>
 
         <script type='text/javascript' src='../js/display-controller.js'></script>
         <script type='text/javascript' src="../js/game-controller.js"></script>
