--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        <div id="l-container">
+        <div id="container">
             <div id='leaderboard-container' class='leaderboard-container'></div>
         </div>
 
