--- a/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
+++ b/COMP4537/IndividualAssignment/MemoryGame/html/leaderboard.html
@@ -15,6 +15,7 @@
             <div id='leaderboard-container' class='leaderboard-container'></div>
         </div>
 
+        <script type='text/javascript' src="../js/constants.js"></script>
         <script type='text/javascript' src='../js/display-controller.js'></script>
         <script type='text/javascript' src="../js/game-controller.js"></script>
     </body>
