trying to add button

--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -24,6 +24,13 @@
                 <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' form='dict-form'>Enter definition here...</textarea>
             </div>
         </div>
+        <button onclick="goToSearch" value="Search"></button>
+
+        <script>
+            function goToSearch() {
+                window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/search.html"
+            }
+        </script>
         <script src="../../../../js//lab5/dictionary.js"></script>
     </body>
 </html>
