--- a/COMP4537/labs/5/dictionary/search.html
+++ b/COMP4537/labs/5/dictionary/search.html
@@ -23,8 +23,16 @@
                 </div>
                 <div class='def-response'></div>
             </div>
-            
+        
         </div>
+
+        <button onclick="goToIndex" value="Go Home"></button>
+
+        <script>
+            function goToSearch() {
+                window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/index.html"
+            }
+        </script>
         <script src="../../../../js//lab5/dictionary.js"></script>
     </body>
 </html>
