--- a/COMP4537/COMP4537.html
+++ b/COMP4537/COMP4537.html
@@ -29,6 +29,7 @@
                     </li>
                     <li>Lab 3..</li>
                     <li>Lab 4..</li>
+                    <li><a class='la5' href='./labs/5/dictionary/index.html'>Lab 5..</a></li>
                     <li><a class='individual' href='./IndividualAssignment/MemoryGame/index.html'>Invididual Assignment</a></li>
                 </ul>
             </div>        
