--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -12,8 +12,8 @@
         <div id='container'>
             <div id="inner-container">
                 <div class='top-container'>
-                    <span class='title' class='form-child'>Are we missing a word?! Help us out. Enter it for us!</span><br><br>
-                    <span class='title' class='form-child'>Help us out. Enter it for us!</span><br><br>
+                    <span class='title' class='form-child'>Are we missing a word?! Help us out.</span><br><br>
+                    <span class='title' class='form-child'>Enter it for us!</span><br><br>
                 </div>
 
                 <form onsubmit='createEntry(this.word.value, this.definition.value)' id='dict-form'>
@@ -23,7 +23,7 @@
                 </form>
                 <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' form='dict-form'>Enter definition here...</textarea>
             </div>
-                <button onclick="goToSearch" value="Search"></button>
+                <button onclick="goToSearch" value="Search">Search</button>
         </div>
 
 
