--- a/COMP4537/labs/5/dictionary/search.html
+++ b/COMP4537/labs/5/dictionary/search.html
@@ -17,13 +17,14 @@
                     <div class='search-text-area'>
                         <input id="search-word" type='text' placeholder='Search...'>
                     </div>
-                    <input type='button' value='Submit' onclick="submit()">
+                    
                     <div class='icon'>
                     </div>
                 </div>
+                <input id='submit' type='button' value='Submit' onclick="submit()">
                 <div class='def-response'></div>
             </div>
-            <button onclick="goToIndex" value="Go Home"></button>
+            <button onclick="goToIndex" value="Home">Go Home</button>
         </div>
 
        
