--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -29,6 +29,7 @@
 
         <script>
             function goToSearch() {
+                console.log("I should change to search")
                 window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/search.html"
             }
         </script>
