--- a/COMP4537/labs/5/dictionary/search.html
+++ b/COMP4537/labs/5/dictionary/search.html
@@ -31,6 +31,8 @@
 
         <script>
             function goToSearch() {
+                console.log("I should change to index")
+
                 window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/index.html"
             }
         </script>
