fixing routing paths

--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -23,16 +23,9 @@
                 </form>
                 <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' form='dict-form'>Enter definition here...</textarea>
             </div>
-                <button onclick="goToSearch" value="Search">Search</button>
+                <button onclick="goToSearch()" value="Search">Search</button>
         </div>
 
-
-        <script>
-            function goToSearch() {
-                console.log("I should change to search")
-                window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/search.html"
-            }
-        </script>
         <script src="../../../../js//lab5/dictionary.js"></script>
     </body>
 </html>
