--- a/COMP4537/labs/5/dictionary/search.html
+++ b/COMP4537/labs/5/dictionary/search.html
@@ -24,18 +24,9 @@
                 <input id='submit' type='button' value='Submit' onclick="submit()">
                 <div class='def-response'></div>
             </div>
-            <button onclick="goToIndex" value="Home">Go Home</button>
+            <button onclick="goToIndex()" value="Home">Go Home</button>
         </div>
 
-       
-
-        <script>
-            function goToSearch() {
-                console.log("I should change to index")
-
-                window.location.href="https://darkraginginferno.github.io/COMP4537//labs/5/dictionary/index.html"
-            }
-        </script>
         <script src="../../../../js//lab5/dictionary.js"></script>
     </body>
 </html>
