input button needs a name

--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -22,7 +22,7 @@
                     <label class='form-child text-area-label' for='definition'>New Definition:</label>
                 </form>
                 <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' form='dict-form'>Enter definition here...</textarea>
-                <input id='submit' type='button' class='form-child' form='dict-form'>
+                <input id='submit' type='button' class='form-child' name='Submit" form='dict-form'>
             </div>
                 <button onclick="goToSearch()" value="Search">Search</button>
         </div>
