--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -19,10 +19,10 @@
                 <form onsubmit='createEntry(this.word.value, this.definition.value)' id='dict-form'>
                     <label class='form-child' for='word'>New Word:</label>
                     <input class='word-input' type='text' id='word' name='word' placeholder="New word here..."><br>
-                    <label class='form-child text-area-label' for='definition'>New Definition:</label>
+                    <label class='form-child text-area-label' for='definition'>New Definition:</label><br>
+                    <textarea id='definition' class='form-child' rows='4' cols='70' name='definition'>Enter definition here...</textarea><br>
+                    <input id='submit' type='submit' class='form-child' value='Submit'>
                 </form>
-                <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' form='dict-form'>Enter definition here...</textarea>
-                <input id='submit' type='button' class='form-child' value='Submit' name='Submit" form='dict-form'>
             </div>
                 <button onclick="goToSearch()" value="Search">Search</button>
         </div>
