--- a/COMP4537/labs/5/dictionary/index.html
+++ b/COMP4537/labs/5/dictionary/index.html
@@ -20,7 +20,7 @@
                     <label class='form-child' for='word'>New Word:</label>
                     <input class='word-input' type='text' id='word' name='word' placeholder="New word here..."><br>
                     <label class='form-child text-area-label' for='definition'>New Definition:</label><br>
-                    <textarea id='definition' class='form-child' rows='4' cols='70' name='definition'>Enter definition here...</textarea><br>
+                    <textarea id='definition' class='form-child' rows='4' cols='70' name='definition' placeholder="Enter definition here..."></textarea><br>
                     <input id='submit' type='submit' class='form-child' value='Submit'>
                 </form>
             </div>
