trying to access json obj

--- a/COMP4537/labs/5/dictionary/search.html
+++ b/COMP4537/labs/5/dictionary/search.html
@@ -22,7 +22,10 @@
                     </div>
                 </div>
                 <input id='submit' type='button' value='Submit' onclick="submit()">
-                <div class='def-response'></div>
+                <div id='def-response'>
+                    <div id='term'></div>
+                    <div id='definition'></div>
+                </div>
             </div>
             <button onclick="goToIndex()" value="Home">Go Home</button>
         </div>
