--- a/COMP4537/termProject/pokeAPI/index.html
+++ b/COMP4537/termProject/pokeAPI/index.html
@@ -16,8 +16,8 @@
             window.scrollTo(0, 1);
         }
     </script>
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="./css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="./css/font-awesome.min.css" type="text/css" media="all">
 	<link href="//fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700,700i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800" rel="stylesheet">
 </head>
@@ -82,6 +82,6 @@
     </div>
 </section>
 
-	<scrip src='js/index.js'></script>
+	<scrip src='./js/index.js'></script>
 </body>
 </html>
